# rs-server

./: .flake8  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.adoc  CHANGELOG.md  Dockerfile.POC  README.adoc  README.html  README.md  asciidoctor_runner.rb  bandit.yml  index.html  index.yaml  ingestion_Readme.md  pyproject.toml  s3_storage_handler.py
.github/: dependabot.yml
docs/: pyproject.toml
docs/api/python/: conf.py  index.rst
docs/api/rest/: cadu_download.adoc  cadu_search.adoc  cadu_search.md
docs/dev/: code-style.adoc  dev-manual.adoc  get-started.adoc
docs/dev/background/: ci.adoc  tree-structure.adoc  workflow.adoc
docs/dev/design/: design.adoc
docs/dev/design/services/: api.adoc  cadip.adoc  design.adoc  event.adoc  library.adoc  service-structure.puml
docs/dev/design/uac/: design.adoc
docs/dev/environment/: description.adoc  installation.adoc
docs/dev/how-to/: generate-documentation.adoc
docs/doc/: developer_manual.md  index.adoc  index.md  user_manual.md
docs/doc/api/python/: conf.py  index.rst
docs/doc/api/rest/: index.adoc  index.html  index.md
docs/doc/dev/: code-style.adoc  code-style.md
docs/doc/dev/background/: ci.adoc  ci.md  tree-structure.adoc  tree-structure.md  workflow.adoc  workflow.md
docs/doc/dev/design/: design.adoc  design.md
docs/doc/dev/doc-generation/: description.adoc  description.md  how-to.adoc  how-to.md
docs/doc/dev/environment/: description.adoc  description.md  installation.adoc  installation.md
docs/doc/users/: architecture.adoc  architecture.md  catalog.md  configuration.md  functionalities.adoc  functionalities.md  installation.adoc  installation.md  oauth2_apikey_manager.md
docs/uml/: auxip-stac.plantuml  cadip-stac.plantuml  external-data-sources-oauth2.plantuml  python-components.plantuml  python-rs-client.plantuml  stac-item-lifecycle.plantuml  stac-item-staging.plantuml
docs/users/: functionalities.adoc  installation.adoc  user-manual.adoc
services/adgs/: README.md  pyproject.toml
services/adgs/.github/: Dockerfile
services/adgs/config/: ODataToSTAC_template.json  adgs_search_config.yaml  adgs_stac_landing_page.json  adgs_stac_mapper.json  adgs_ws_config.yaml  adgs_ws_config_token_module.yaml
services/adgs/rs_server_adgs/: __init__.py  adgs_download_status.py  adgs_retriever.py  adgs_utils.py
services/adgs/rs_server_adgs/api/: __init__.py  adgs_api.py  adgs_download.py  adgs_search.py  adgs_status.py
services/adgs/rs_server_adgs/fastapi/: adgs_app.py  adgs_routers.py
services/adgs/tests/: __init__.py
services/cadip/: Dockerfile.POC  README.md  __init__.py  pyproject.toml
services/cadip/.github/: Dockerfile
services/cadip/config/: ODataToSTAC_template.json  cadip_search_config.yaml  cadip_session_ODataToSTAC_template.json  cadip_sessions_stac_mapper.json  cadip_stac_conforms_to.json  cadip_stac_landing_page.json  cadip_stac_mapper.json  cadip_ws_config.yaml  cadip_ws_config_token_module.yaml  stations_cfg.json
services/cadip/rs_server_cadip/: __init__.py  cadip_download_status.py  cadip_retriever.py  cadip_utils.py  cadu_download_status.py  openapi.py  stac_service_cadip.py
services/cadip/rs_server_cadip/api/: __init__.py  cadip_api.py  cadip_download.py  cadip_search.py  cadip_status.py  cadu_download.py  cadu_search.py  cadu_status.py
services/cadip/rs_server_cadip/fastapi/: __init__.py  cadip_app.py  cadip_routers.py
services/cadip/tests/: __init__.py
services/catalog/: .gitignore  README.md  pyproject.toml  pyproject.toml.orig  rs_server_common
services/catalog/.github/: Dockerfile
services/catalog/rs_server_catalog/: __init__.py  authentication_catalog.py  landing_page.py  lifecycle.py  main.py  response_manager.py  search.py  timestamps_extension.py  user_catalog.py  user_handler.py  utils.py
services/catalog/rs_server_catalog/config/: buckets.json
services/catalog/tests/: .env  __init__.py  conftest.py  docker-compose.yml  test_authentication_catalog.py  test_endpoints.py  test_life_cycle.py  test_user_handler.py
services/common/: README.md  __init__.py  pyproject.toml  pyproject.toml.orig
services/common/config/: constellation.yaml  rs-server.yaml  stations_cfg.json
services/common/db/: __init__.py  database.py
services/common/models/: product_download_status.py
services/common/rs_server_common/: __init__.py  authentication.py  authentication_to_external.py  depends.py  fastapi_app.py  settings.py  stac_api_common.py
services/common/rs_server_common/authentication/: apikey.py  authentication.py  authentication_to_external.py  keycloak_util.py  oauth2.py
services/common/rs_server_common/data_retrieval/: __init__.py  data_retriever.py  download_monitor.py  eodag_provider.py  provider.py  s3_storage.py  storage.py
services/common/rs_server_common/db/: __init__.py  database.py
services/common/rs_server_common/models/: product_download_status.py
services/common/rs_server_common/s3_storage_handler/: __init__.py  s3_storage_handler.py
services/common/rs_server_common/schemas/: __init__.py  download_status_schema.py  health_schema.py
services/common/rs_server_common/utils/: __init__.py  logging.py  opentelemetry.py  provider_ws_address.py  pytest_utils.py  utils.py  utils2.py
services/common/tests/: __init__.py  test_utils.py
services/common/tests/data_retrieval/: __init__.py  conftest.py  test_data_retriever.py
services/frontend/: README.md  pyproject.toml  pyproject.toml.orig
services/frontend/.github/: Dockerfile  entrypoint_frontend.sh
services/frontend/resources/: build_aggregated_openapi.sh  openapi.json  services.json  services.yml
services/frontend/rs_server_frontend/: __init__.py  main.py
services/frontend/tests/: __init__.py  conftest.py  test_doc.py  test_tools.py
services/frontend/tools/: __init__.py  openapi.py
services/staging/: README.md  db.json  pyproject.toml
services/staging/.github/: Dockerfile
services/staging/rs_server_staging/: main.py  processors.py  rspy_models.py
services/staging/tests/: conftest.py  test_rspy_processor.py  test_staging.py
(+238 files in other folders)
