[project]
name = "rs-server-catalog"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-server-catalog"
version = "0.0.0"
description = "rs-server stac catalog"
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "rs_server_catalog" },
    { include = "tests", format = "sdist" },

    # TEMP for https://pforge-exchange2.astrium.eads.net/jira/browse/RSPY-155
    # Use the rs_server_common source directory instead of using rs-server-common as a dependency.
    # But this doesn't work when building the wheel. So for the whl, copy the rs_server_common
    # directory and remove the from=../common part.
    { include = "rs_server_common", from = "../common" },
]

# Add configuration files to the .whl package
include = [
    { path = "config", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
stac-fastapi-pgstac = "==2.4.11" # TODO: update to 2.5.0
uvicorn = "^0.30.1"
moto = "==5.0.10"
flask = "^3.0.3"
flask-cors = "^4.0.1"
pytest-mock = "^3.14.0"
pygeofilter = "^0.2.1"

# TEMP for https://pforge-exchange2.astrium.eads.net/jira/browse/RSPY-155
# we also need the rs-server-common dependencies. We duplicate them here
# except duplicates and dependencies on which we have version conflicts.
# python = "^3.11"
fastapi = "^0.111.0"
boto3 = "==1.28.85"
botocore = "==1.31.85"
sqlalchemy = "^2.0.31"
# eodag = "==2.12.0"
# pydantic = ">=2.0.0"
markdown = "^3.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
filelock = "^3.15.4"
# uvicorn = "^0.27.1"
httpx = "^0.27.0"
cachetools = "^5.3.3"
asyncache = "^0.3.1"
orjson = "3.10.5"
opentelemetry-distro = "^0.46b0" # then run 'poetry run opentelemetry-bootstrap -a install'
opentelemetry-exporter-otlp = "^1.25.0"
python-logging-loki = "^0.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Formatting
black = "^24.4.1"
# Testing
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-error-for-skips = "^2.0.2"
pytest-docker = "^3.1.0"
pytest-dotenv = "^0.5.2"
# httpx is used by fastapi for test purpose
httpx = "^0.27.0"
# sqlalchemy-utils is used for pgstac test purpose
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.7"


[tool.black]
line-length = 120


[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]
# pgstac and stac-fastapi env file for test purpose
env_files = [
    "tests/.env"
]
asyncio_mode = "auto"


[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
tagged-metadata = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
