[project]
name = "rs-server-common"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-server-common"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "rs_server_common" },
    { include = "tests", format = "sdist" },
]

# Add configuration files to the .whl package
include = [
    { path = "config", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
boto3 = "==1.28.85"
botocore = "==1.31.85"
sqlalchemy = "^2.0.32"
eodag = "==3.0.0b3"
pydantic = ">=2.0.0"
markdown = "^3.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
filelock = "^3.15.4"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
cachetools = "^5.5.0"
asyncache = "^0.3.1"
orjson = [ # we need the same markers and versions as in eodag: https://github.com/CS-SI/eodag/blob/develop/setup.cfg
    {version = "<3.10.0", markers = "python_version>='3.12' and platform_system=='Windows'"},
    {version = "^3.10", markers = "python_version<'3.12' or platform_system!='Windows'"},
]
opentelemetry-distro = "^0.46b0" # then run 'poetry run opentelemetry-bootstrap -a install'
opentelemetry-exporter-otlp = "^1.25.0"
python-logging-loki = "^0.3.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.0"
pytest-error-for-skips = "^2.0.2"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]

[tool.mypy]
warn_redundant_casts = true
# Force analyze of partially annotate function signatures
check_untyped_defs = true

[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
tagged-metadata = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
