[project]
name = "rs-server-common"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-server-common"
version = "0.0.0"
description = "Copernicus Sentinel rs-server, common services."
license = "Apache-2.0"
authors = ["ESA under contract with Airbus and CS <ops_coprs@airbus.com>"]
readme = "README.md"
homepage = "https://home.rs-python.eu/"
repository = "https://github.com/RS-PYTHON/rs-server"
documentation = "https://home.rs-python.eu/rs-documentation/rs-server/docs/doc/"
keywords = ["stac", "copernicus", "sentinel", "processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: OpenTelemetry",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing"
]

packages = [
    { include = "rs_server_common" },
    { include = "tests", format = "sdist" },
]

# Add configuration files to the .whl package
include = [
    { path = "config", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
boto3 = "==1.28.85"
botocore = "==1.31.85"
sqlalchemy = "^2.0.35"
eodag = "==3.0.0b3"
pydantic = ">=2.9.2"
markdown = "^3.6"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
filelock = "^3.16.1"
uvicorn = "^0.31.0"
httpx = "^0.27.2"
cachetools = ">=5.3.*" # idem as stac-fastapi-pgstac
asyncache = "^0.3.1"
orjson = [ # we need the same markers and versions as in eodag: https://github.com/CS-SI/eodag/blob/develop/setup.cfg
    {version = "<3.10.0", markers = "python_version>='3.12' and platform_system=='Windows'"},
    {version = "^3.10", markers = "python_version<'3.12' or platform_system!='Windows'"},
]
opentelemetry-distro = "^0.48b0" # then run 'poetry run opentelemetry-bootstrap -a install'
opentelemetry-instrumentation-aws-lambda = "^0.48b0"
opentelemetry-test-utils = "^0.48b0"
opentelemetry-exporter-otlp = "^1.27.0"
python-logging-loki = "^0.3.1"
stac-pydantic = "^3.1.2"
authlib = "^1.3.1"
python-keycloak = "^4.5.0"
itsdangerous = "^2.2.0"
python-jose = "^3.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.0"
pytest-error-for-skips = "^2.0.2"
pytest-httpx = "^0.32.0"
pytest-mock = "^3.14.0"
responses = "^0.25.3"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]

[tool.mypy]
warn_redundant_casts = true
# Force analyze of partially annotate function signatures
check_untyped_defs = true

[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
metadata = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
