[project]
name = "rs-server-frontend"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-server-frontend"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "rs_server_frontend" },
    { include = "tools", format = "sdist" },
    { include = "tests", format = "sdist" },
]

# Add configuration files to the .whl package
include = [
    { path = "resources/openapi.json", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
attrs = "^23.2.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-docker = "^3.1.0"
pytest-error-for-skips = "^2.0.2"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.12.0"
# Testing fastapi
httpx = "^0.27.0"
# Tools
requests = "^2.32.3"
# Test tools
responses = "^0.25.3"
pylint = "^3.2.5"


[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]

[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
tagged-metadata = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
