[project]
name = "rs-server-staging"
version = "0.0.0" # see: https://github.com/mtkennerly/poetry-dynamic-versioning

[tool.poetry]
name = "rs-server-staging"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [
    { include = "rs_server_staging" },
    { include = "tests", format = "sdist" },
]

# Add configuration files to the .whl package
include = [
    { path = "config", format = ["wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pygeoapi = "^0.17.0"
tinydb = "^4.8.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
pygeoapi = "^0.17.0"
tinydb = "^4.8.0"
uvicorn = "^0.30.1"
pre-commit = "^3.7.1"
bandit = "^1.7.9"
pylint = "^3.2.5"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
markers = [
    "unit", # mark a test as unittest
    "integration", # mark a test as integration test
]

[tool.mypy]
warn_redundant_casts = true
# Force analyze of partially annotate function signatures
check_untyped_defs = true

[tool.poetry-dynamic-versioning] # needs: poetry self add "poetry-dynamic-versioning[plugin]"
enable = true
tagged-metadata = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
